--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet"href="style.css">
+
 <h1>HTMLの学習</h1>
 
 <h2>ヘッダータグ</h2>
@@ -19,3 +21,54 @@
 <p>strong タグは強調表示</p>
 
 <p>font タグは文字の詳細を設定できます。color="red"のように入力すると、赤い文字にできます。</p>
+
+<h2>a リンクの例</h2>
+
+<a href="https://developer.mozilla.org/ja/"><h3>参考ウェブサイト</h3></a>
+
+<h2>br 改行要素</h2>
+
+<p>Mozillaは、オープンソースのブラウザやWeb関連ソフトウェア開発団体です。
+<br>
+    今回授業では、MDZという、ウェブブラウザを開発する人向けのサイトを参考にします。
+</p>
+
+<h2>button ボタンの例</h2>
+
+<button onclick="alert('Hello Wold!')">クリックしてみてください</button>
+
+
+<h2>ing 画像の例</h2>
+<img src="https://assets.st-note.com/img/1745068926-5rGapgYHtDd7elKzmUnANvi2.jpg?width=1200"
+art="眞鍋瑚太郎"　width="1000" heigth="750"></img>
+
+<h2>input 入力フォームの例</h2>
+<input type="color" value="#ff0000">
+
+<p>タグの中に追加で記述される情報を<strong>属性</strong>という</p>
+
+<br>
+
+<input type="number" id="num" value="0">
+<button onclick="result.textContent = Number(num.value)+1">1を加算</button>
+<p id="result">ここに結果が表示されます</p>
+
+<h2>ol ul リストの例</h2>
+<h3>番号付きリスト</h3>
+
+<ol>
+    <li>りんご</li>
+    <li>バナナ</li>
+    <li>みかん</li>
+</ol>
+
+<h3>番号なしリスト</h3>
+
+<ul>
+    <li>りんご</li>
+    <li>バナナ</li>
+    <li>みかん</li>
+</ul>
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
